--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -52,7 +52,8 @@
             "close" : "Close",
             "back" : "Return",
             "next" : "Next",
-            "previous" : "Previous"
+            "previous" : "Previous",
+            "filter":"Filter"
         },
         "settings" : {
             "activity": {
