--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -52,7 +52,8 @@
       "close": "Fermer",
       "back": "Retour",
       "next": "Suivant",
-      "previous": "Précédent"
+      "previous": "Précédent",
+      "filter":"Filtrer"
     },
     "settings": {
       "activity": {
