#140711133416131 : [Pascalsept Pelerinsept] Avant de présenter cette page, je pense qu'il faudrait une page ou un petit texte d'introduction du type : "Vous allez souscrire un abonnement à l'application Qaobee."

--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -53,7 +53,8 @@
             "back" : "Return",
             "next" : "Next",
             "previous" : "Previous",
-            "filter":"Filter"
+            "filter":"Filter",
+            "agree" : "I agree"
         },
         "settings" : {
             "activity": {
