--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -20,7 +20,7 @@
     },
     "trial": {
       "title": "Vous êtes en période d'essai.",
-      "content": "Vous pouvez vous abonner à tout moment en <a href=\"/#/private/profile/pay/0\" >cliquant ici</a>. Cette période expire dans <b>{{count}}</b> jour(s)."
+      "content": "Vous pouvez vous abonner à tout moment en <a href=\"/#/private/billing/pay/0\" >cliquant ici</a>. Cette période expire dans <b>{{count}}</b> jour(s)."
     }
   },
   "navbar": {
