--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -84,17 +84,16 @@
       "standard": {
         "title": "Standard",
         "price": "8",
-        "period": "par mois",
-        "desc": "L'espace de travail dont vous avez besoin pour vous entraîner en toute simplicité.",
+        "period": "par utilisateur / par mois",
+        "desc": "L'espace de travail dont vous avez besoin pour entraîner en toute simplicité.",
         "detail": {
           "title": "Standard comprends",
           "sub-title": "Toutes ces fonctionnalités :",
-          "line1": "Tableau de bord personnalisé",
-          "line2": "Gestion de l'effectif",
-          "line3": "Calendrier sportif",
-          "line4": "Entraînement",
-          "line5": "Collecte de données en temps réel",
-          "line6": "Rapports statistiques"
+          "line1": "Gestion de son effectif et de ses équipes",
+          "line2": "Agenda partagé",
+          "line3": "Partage de son espace de travail avec d'autres entraîneurs",
+          "line4": "Collecte de données en temps réel",
+          "line5": "Statistiques par joueur, par équipe, par match"
         }
       },
       "team": {
