--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -35,10 +35,10 @@
   "content": {
     "login": {
       "label": {
-        "login": "Login",
+        "login": "Identifiant",
         "password": "Mot de passe",
         "signin": "Se connecter",
-        "forgotpasswd": "Mot de passe oublié?",
+        "forgotpasswd": "Mot de passe oublié ?",
         "forgotpasswdmess": "Ce sont des choses qui arrivent, donnez-nous votre identifiant de connexion, nous le réinitialiserons pour vous!",
         "title": "Connectez vous sur <b>Qaobee</b>",
         "forgotpasswdcancel": "Attendez, je m'en rappelle à présent!"
@@ -48,7 +48,7 @@
       "label": {
         "name": "Nom",
         "firstname": "Prénom",
-        "login": "Login",
+        "login": "Identifiant",
         "email": "e-Mail",
         "password": "Mot de passe",
         "passwordConfirm": "Confirmation",
