--- a/src/app/components/i18n/public/en.json
+++ b/src/app/components/i18n/public/en.json
@@ -3,7 +3,7 @@
     "main-title" : "Collect everything",
     "sub-title" : "The first sports data collection tool in real time",
     "manual-btn" : "How it works",
-    "connect" : "Stay connected",
+    "about": "About us",
     "legals" : "Legal information",
     "area-2" : {
       "title" : "Operate on sports data",
