Simplification création compte

--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -34,6 +34,9 @@
 	"headerSignup" : {
 		"label" : "Inscription"
 	},
+    "headerSignupEnd" : {
+		"label" : "Choix du club"
+	},
     "civilSection" : {
     	"line1" : "Votre inscription est presque terminée !",
     	"line2" : "Ces dernières étapes vont permettre la création de votre espace personnel et l'accès à votre assistant de collecte et d'analyse de données de performance en temps réel.",
