#160 : [TEAM-002] Liste des équipes : comparaison avec 1 équipe

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -154,6 +154,6 @@
     "event-max" : "You can select at most {{max}} events",
     "event-min" : "You have to select at least one event",
     "team-max" : "You can select at most {{max}} teams",
-    "team-min" : "You have to select at least one team"
+    "team-min" : "You have to select at least two teams"
   }
 }
