--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -149,7 +149,7 @@
   },
   "compare": {
     "player-max": "Vous ne pouvez sélectionner que {{max}} joueurs",
-    "player-min" : "Vous devez sélectionner au moins un joueur",
+    "player-min" : "Vous devez sélectionner au moins deux joueurs",
     "event-max" : "Vous ne pouvez sélectionner que {{max}} événements",
     "event-min" : "Vous devez sélectionner au moins un événement",
     "team-max" : "Vous ne pouvez sélectionner que {{max}} équipes",
