--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -54,7 +54,10 @@
             }
         },
         "tabCreateClub" : {
-            "tabTitle":"ou créer votre propre club"
+            "tabTitle":"ou créer votre propre club",
+            "messageControl": {
+                "labelControl" : "Le libellé du club est obligatoire et doit contenir au moins 3 caratères"
+            }
         },
         "errorPage" : {
             "title" : "Erreur !",
