--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -35,15 +35,18 @@
   },
   "modal": {
     "login": {
-      "label": {
-        "login": "Identifiant",
-        "password": "Mot de passe",
-        "signin": "Se connecter",
-        "forgotpasswd": "Mot de passe oublié ?",
-        "forgotpasswdmess": "Ce sont des choses qui arrivent, donnez-nous votre identifiant de connexion, nous le réinitialiserons pour vous!",
-        "title": "Connectez vous sur <b>Qaobee</b>",
-        "forgotpasswdcancel": "Attendez, je m'en rappelle à présent!"
-      }
+        "label": {
+            "login": "Identifiant",
+            "password": "Mot de passe",
+            "signin": "Se connecter",
+            "forgotpasswd": "Mot de passe oublié ?",
+            "forgotpasswdmess": "Ce sont des choses qui arrivent, donnez-nous votre identifiant de connexion, nous le réinitialiserons pour vous!",
+            "title": "Connectez vous sur <b>Qaobee</b>",
+            "forgotpasswdcancel": "Attendez, je m'en rappelle à présent!"
+        },
+        "messageControl": {
+            "unregistreduser" : "Votre compte n'a pas encore été activé. Consultez votre messagerie"
+        }
     }
   }
 }
